# csc_122_dynamic_memory_allocation

./: .gitignore  1_initial_garden_tracker.cpp  2_dynamic_memory_examples.cpp  3_memory_leak  3_memory_leak.cpp  4_dynamic_array  4_dynamic_array.cpp  CMakeLists.txt  Makefile  NOTES.md  README.md  helpers.cpp  helpers.hpp  main.cpp
