cmake_minimum_required(VERSION 3.15)

project("Dynamic Memory Allocation")

set (CMAKE_CXX_STANDARD 14)

add_executable(1_initial_garden_tracker 1_initial_garden_tracker.cpp)
add_executable(2_dynamic_memory_examples 2_dynamic_memory_examples.cpp)
add_executable(3_memory_leak 3_memory_leak.cpp)
add_executable(4_dynamic_array 4_dynamic_array.cpp)
